Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130273

DOMException when play()'ing audio tags with mp3 sources

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1
    • 6.8.0
    • WebEngine
    • None
    • Linux/Wayland
    • 3b9f0ed80 (122-based), 0ce73c83f (126-based), 54a756b84 (130-based), 45675fa01 (126-based), 24e9ff7ca (122-based)

      Using Arch's 6.8.0 package with qutebrowser or Anki, play()'ing <audio> tags with mp3 sources fails since 6.8.0 (LKG 6.7.3) with:

      DOMException: The element has no supported sources.

      Tags using <audio> with ogg and <video> tags (mp4 tested) are still fine.

      (Arch bugreport here)

        For Gerrit Dashboard: QTBUG-130273
        # Subject Branch Project Status CR V

            mnegyokru Martin Negyokru
            misc Andreas Reis
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes