Fixup: Fix building with system ffmpeg

System FFmpeg contains multiple codecs for mp3 and
uses whatever it finds first. Chromium only supports one,
and not aware of others.

Force the supported codec for mp3 decoding.

Fixes: QTBUG-130273
Pick-to: 126-based
Change-Id: Ic25ae719ee0490426ddac8df7544dff04fc0b255
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/599610
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>